intermediate calendar fix that keeps sidebar ok and allows page scroll with no scrollbar !

--- a/public/css/module.css
+++ b/public/css/module.css
@@ -337,6 +337,6 @@ body {
 }
 
 .scroll-overflow {
-    height: 500px;
+    height: 550px;
     overflow: auto;
 }
